--- a/index.html
+++ b/index.html
@@ -735,7 +735,7 @@
                 </div>
                 <div class="contact-text">
                     <h3>Email Us</h3>
-                    <a href="mailto:contact@nxtstep.com">nxtstep.webdesign@gmail.com</a>
+                    <a href="mailto:nxtstep.webdesign@gmail.com">nxtstep.webdesign@gmail.com</a>
                 </div>
             </div>
             
