--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="description" content="NXTSTEP - Affordable, innovative web design and development agency specializing in modern websites and SEO services.">
     <meta name="keywords" content="affordable web design, website development, SEO services, digital agency, modern websites">
     <title>NXTSTEP |Web Design Agency</title>
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
     <style>
