--- a/index.html
+++ b/index.html
@@ -599,7 +599,7 @@
     <!-- About Section -->
     <section class="about" id="about">
         <div class="about-image animate__animated animate__fadeInLeft">
-            <img src="Black and White Initial A Tech Business Logo  (2).png" alt="NXTSTEP Team">
+            <img src="Black and White Initial A Tech Business Logo  (3).png" alt="NXTSTEP logo">
         </div>
         <div class="about-content animate__animated animate__fadeInRight">
             <h2>About NXTSTEP</h2>
